--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-	<title>Love</title>
+	<title>Việt Hoàng Trần</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta http-equiv-"X-UA-Compatible" content="IE=9" />
 	<link rel="icon" href="favicon.ico" type="image/gif" sizes="16x16">
